Fri Mar 15 06:31:32 GMT 2013  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc,matcher/multixorpostlist.cc: Add a
	  couple more LOGCALL annotations.

Fri Mar 15 06:27:42 GMT 2013  Dan Colish <dcolish@gmail.com>

	* api/registry.cc,common/pretty.h: Fix incorrect LOGCALL return value.

Fri Mar 15 06:24:11 GMT 2013  Olly Betts <olly@survex.com>

	* api/registry.cc,common/Makefile.mk,common/registryinternal.h:
	  common/registryinternal.h is only included by api/registry.cc so
	  just inline its contents.

Fri Mar 15 06:11:14 GMT 2013  Olly Betts <olly@survex.com>

	* api/registry.cc: No need to explicitly default initialise std::map
	  members or the base class.

Fri Mar 08 04:05:31 GMT 2013  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc: Fix
	  multipass compaction not to damage document values, and to merge the
	  database stats correctly.  (fixes #615)
	* tests/api_compact.cc: Add regression test compactmultipass1.

Thu Mar 07 00:34:46 GMT 2013  Aarsh Shah <aarshkshah1992@gmail.com>

	* tests/api_anydb.cc: Added tradweight4 testcase to test TradWeight
	  with an RSet for weighting documents.

Wed Mar 06 08:55:12 GMT 2013  Olly Betts <olly@survex.com>

	* HACKING: gs package has been replaced by ghostscript package in
	  current Debian and Ubuntu releases.

Tue Feb 19 04:17:19 GMT 2013  Olly Betts <olly@survex.com>

	* common/Tokeniseise.pm: Add the ability to append lines to the
	  header.

Fri Feb 15 05:37:09 GMT 2013  Olly Betts <olly@survex.com>

	* common/realtime.h: Fix RealTime::sleep() to calculate the delta to
	  the time we want to sleep to the right way round.  Previously we
	  wouldn't sleep if we were before the deadline, but would sleep if
	  the deadline had already passed (and by the amount the deadline had
	  passed)!  And on Windows, fix the sleep to be for the delta rather
	  than 43+ years (the time elapsed since the start of 1970).  (Fixes
	  #472)
